tests/invalid/static_array_mutating_member_not_supported.wio
fn Entry() -> i32 {
    mut values: [i32; 3] = [1, 2, 3];
    values.Push(4);
    return 0;
}
